--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Things and stuff and junk</title>
+  <title>Accessibility fixer-upper</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -23,6 +23,7 @@
           <li><a href="#">Prices</a></li>
           <li><a href="#">News</a></li>
           <li><a href="#">Contact</a></li>
+        </ol>
       </div>
     </div>
   </div>
@@ -38,7 +39,10 @@
           <p class="mega push-0">Is there anywhere in this town where we could buy a shrubbery!?</p>
           <p class="mega push-0 max-length">Yes, shrubberies are my trade—I am a shrubber. My name is Roger the Shrubber. I arrange, design, and sell shrubberies.</p>
         </div>
+      </div>
     </div>
+  </div>
+
 
     <div>
       <div class="wrapper gutter-1-2">
@@ -50,6 +54,7 @@
             <div class="gutter-1-4" id="grassy-shrubs">
               <h1 class="mega push-0">Grassy shrubs</h1>
               <span>Grassy shrubs are pretty much grass, but I group them together in clumps so they look kinda like shrubs.</span>
+            </div>
           </li>
           <li class="unit [ xs-1 s-1 m-1-2 l-1-3 ]">
             <img class="img-flex push" src="images/shrub 2.jpg">
@@ -123,6 +128,7 @@
           </li>
         </ol>
       </div>
+    </div>
 
     <div class="contact pad-t pad-b">
       <div class="wrapper">
